--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -3,7 +3,7 @@
   %div
     %h2#item-name= @item.name
     = nc_icon_for(@item)
-    - unless @item.rarity.empty?
+    - unless @item.rarity.blank?
       == Rarity: #{@item.rarity_index} (#{@item.rarity})
     %a.button{:href => neoitems_url_for(@item)} NeoItems
 
