--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1340,7 +1340,7 @@ body.outfits-edit #preview-outfits > ul > li.loading .outfit-star {
 }
 /* line 71, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit #preview-outfits > ul > li.loading.active .outfit-star {
-  background-image: url('/images/loading_current_outfit.gif?1290649989');
+  background-image: url('/images/loading_current_outfit.gif?1290738816');
 }
 /* line 73, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit #preview-outfits > ul > li h4 {
@@ -1559,7 +1559,7 @@ body.outfits-edit #new-outfit.loading .outfit-star {
 }
 /* line 71, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit #new-outfit.loading.active .outfit-star {
-  background-image: url('/images/loading_current_outfit.gif?1290649989');
+  background-image: url('/images/loading_current_outfit.gif?1290738816');
 }
 /* line 73, ../../../app/stylesheets/outfits/_edit.sass */
 body.outfits-edit #new-outfit h4 {
@@ -1954,6 +1954,12 @@ body.outfits-new #tell-the-world img {
   margin-right: 0.25em;
   height: 16px;
   width: 16px;
+}
+/* line 146, ../../../app/stylesheets/outfits/_new.sass */
+body.outfits-new .beta-tag {
+  color: red;
+  font-size: 50%;
+  vertical-align: super;
 }
 
 /* line 2, ../../../app/stylesheets/outfits/_show.sass */
