--- a/app/stylesheets/outfits/_new.sass
+++ b/app/stylesheets/outfits/_new.sass
@@ -143,3 +143,7 @@ body.outfits-new
         right: .25em
       height: 16px
       width: 16px
+  .beta-tag
+    color: red
+    font-size: 50%
+    vertical-align: super
