implement head.js

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,3 +1,4 @@
+- javascript_chain :jquery, :swfobject, 'items/show'
 %header
   = image_tag @item.thumbnail_url, :id => 'item-thumbnail'
   %div
@@ -31,10 +32,4 @@
     Javascript and Flash are required to preview wearables. Sorry!
 
 :javascript
-  var CURRENT_ITEM_ZONES_RESTRICT = #{@item.zones_restrict.inspect},
-    IMPRESS_HOST = #{RemoteImpressHost.inspect};
-
-- content_for :javascripts do
-  = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js',
-    'http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js',
-    'items/show'
+  var CURRENT_ITEM_ZONES_RESTRICT = #{@item.zones_restrict.inspect};
