remove unnecessary wardrobe.js dependency on home page

--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -1,5 +1,5 @@
 - hide_home_link
-- javascript_chain :jquery, 'wardrobe', 'pet_query', 'outfits/new'
+- javascript_chain :jquery, 'pet_query', 'outfits/new'
 #outfit-forms
   #pet-preview
     = image_tag 'default_preview.png', :alt => ''
